Add project.test() support